--- a/src/main/resources/templates/mascota-listado.html
+++ b/src/main/resources/templates/mascota-listado.html
@@ -61,7 +61,7 @@
 								        <td th:text="${m.peso}" class="align-middle"></td>
 								        <td th:text="${m.cliente.nombres + ' ' + m.cliente.apellidos}" class="align-middle"></td>
 								        <td class="align-middle">
-											<a class="btn btn-warning text-white" role="button">Editar</a>
+											<button class="btn btn-primary" th:onclick="'editarMascota(' + ${m.codMascota} + ')'" >Editar</button>
 					    				</td>
 					    				<td class="align-middle"> 
 											<button type="button" class="btn btn-danger deletebtn">Eliminar</button>
@@ -75,7 +75,6 @@
                 </div>
             </div>           
             <!-- [ striped-table ] end -->
-
         </div>       
     </div>
 </div>
@@ -104,7 +103,9 @@
 </div>
 <!-- Fin del Modal -->
 
+
 <script>
+	// Boton eliminar mascota
 	$(document).ready(function(){
 		$('.deletebtn').on('click',function(){
 			$('#eliminarModal').modal('show');
